--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "styled-components": "^5.3.3"
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.3",
+    "swiper": "^8.0.6"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.2",
