--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.2.4",
     "next": "^12.0.10",
+    "next-auth": "^4.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
