--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "swiper": "^8.0.6"
   },
   "devDependencies": {
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^8.8.0",
     "eslint-config-next": "^12.0.10",
