--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,14 @@
 {
 	"root": true,
-	"extends": "next",
+	"env":{
+		"browser": true,
+		"es2021": true
+	},
+	"extends": ["next", "eslint:recommended", "plugin:@typescript-eslint/recommended"],
+	"plugins": [
+		"@typescript-eslint",
+		"unused-imports"
+	],
 	"rules": {
 	  "no-unused-vars": [
 		"error",
@@ -8,6 +16,8 @@
 		  "argsIgnorePattern": "^_",
 		  "varsIgnorePattern": "^_"
 		}
-	  ]
+	  ],
+	  "@typescript-eslint/no-unused-vars": 2,
+	  "unused-imports/no-unused-imports-ts": 2
 	}
   }
