--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.env
+.env.local
+
+
 # Logs
 logs
 *.log
@@ -5,6 +9,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+package-lock.json
+yarn.lock
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
