--- a/package.json
+++ b/package.json
@@ -23,23 +23,31 @@
     "@chakra-ui/react": "^1.8.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@reduxjs/toolkit": "^1.8.6",
     "axios": "^0.26.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "next": "^12.0.10",
+    "next-redux-wrapper": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.4",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "swiper": "^8.0.6"
   },
   "devDependencies": {
+    "@types/node": "^18.11.2",
+    "@types/react": "^18.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^8.8.0",
     "eslint-config-next": "^12.0.10",
-    "prettier": "^2.5.1"
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.8.4"
   }
 }
