--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,15 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@sections/*": ["sections/*"],
+      "@redux-app/*": ["app/*"],
+      "@utils/*": ["utils/*"],
+      "@libs/*": ["libs/*"],
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "libs/fonts.js"],
   "exclude": ["node_modules"]
