--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "swiper": "^8.0.6"
   },
   "devDependencies": {
-    "@types/node": "^18.11.2",
-    "@types/react": "^18.0.21",
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.24",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^2.0.2",
@@ -48,6 +48,6 @@
     "eslint-config-next": "^12.0.10",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.5.1",
-    "typescript": "^4.8.4"
+    "typescript": "4.8.4"
   }
 }
