--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "next": "^12.0.10",
+    "next-auth": "^4.16.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -35,7 +36,8 @@
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
-    "swiper": "^8.0.6"
+    "swiper": "^8.0.6",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@types/node": "18.11.8",
