--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@chakra-ui/react": "^1.8.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@stripe/stripe-js": "^1.44.1",
     "axios": "^0.26.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
@@ -35,6 +36,7 @@
     "react-redux": "^8.0.4",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
+    "stripe": "^10.17.0",
     "styled-components": "^5.3.3",
     "swiper": "^8.0.6",
     "zustand": "^4.1.4"
