--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@types/node": "18.11.8",
-    "@types/react": "18.0.24",
+    "@types/react": "^18.0.24",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^2.0.2",
