--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "@chakra-ui/react": "^1.8.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.13.0",
     "@stripe/stripe-js": "^1.44.1",
+    "@types/bcryptjs": "^2.4.2",
     "axios": "^0.26.1",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "next": "^12.0.10",
@@ -53,6 +57,7 @@
     "husky": "^8.0.1",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
+    "prisma": "^4.13.0",
     "typescript": "4.8.4"
   }
 }
