--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@emotion/styled": "^11.10.4",
     "@stripe/stripe-js": "^1.44.1",
     "axios": "^0.26.1",
+    "bcryptjs": "^2.4.3",
+    "bcryptjs-react": "^2.4.6",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "next": "^12.0.10",
