--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^4.13.0",
     "@stripe/stripe-js": "^1.44.1",
     "@types/bcryptjs": "^2.4.2",
+    "aws-amplify": "^5.2.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
@@ -39,6 +40,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.4",
     "react-slick": "^0.28.1",
+    "react-toastify": "^9.1.2",
     "slick-carousel": "^1.8.1",
     "stripe": "^10.17.0",
     "styled-components": "^5.3.3",
