--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/kite-india/Kite_Website#readme",
   "dependencies": {
+    "@aws-amplify/ui-react": "^4.6.4",
     "@chakra-ui/react": "^1.8.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -29,6 +30,7 @@
     "@stripe/stripe-js": "^1.44.1",
     "@types/bcryptjs": "^2.4.2",
     "aws-amplify": "^5.2.0",
+    "aws-sdk": "^2.1387.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
