--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "@stripe/stripe-js": "^1.44.1",
     "@types/bcryptjs": "^2.4.2",
     "aws-amplify": "^5.2.0",
-    "aws-sdk": "^2.1387.0",
+    "aws-jwt-verify": "^4.0.0",
+    "aws-sdk": "^2.1389.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "i": "^0.3.7",
     "next": "^12.0.10",
     "next-auth": "^4.16.3",
+    "npm": "^9.6.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -47,6 +50,8 @@
     "stripe": "^10.17.0",
     "styled-components": "^5.3.3",
     "swiper": "^8.0.6",
+    "uuid": "^9.0.0",
+    "zod": "^3.21.4",
     "zustand": "^4.1.4"
   },
   "devDependencies": {
