added prod backend

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -167,12 +167,5 @@
       ]
     }
   },
-  "storage": {
-    "kitefrontendd73ee5fd": {
-      "dependsOn": [],
-      "providerPlugin": "awscloudformation",
-      "service": "S3",
-      "serviceType": "imported"
-    }
-  }
+  "storage": {}
 }
