--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,26 +1,12 @@
 {
   "api": {
     "kitefrontend": {
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "kitefrontend"
-        }
-      ],
+      "dependsOn": [],
       "output": {
         "authConfig": {
           "additionalAuthenticationProviders": [
             {
               "authenticationType": "AWS_IAM"
-            },
-            {
-              "authenticationType": "AMAZON_COGNITO_USER_POOLS",
-              "userPoolConfig": {
-                "userPoolId": "authkitefrontend"
-              }
             }
           ],
           "defaultAuthentication": {
@@ -63,13 +49,7 @@
           "passwordPolicyCharacters": [],
           "passwordPolicyMinLength": 8
         },
-        "signupAttributes": [
-          "NAME",
-          "BIRTHDATE",
-          "EMAIL",
-          "PHONE_NUMBER",
-          "PICTURE"
-        ],
+        "signupAttributes": [],
         "socialProviders": [
           "GOOGLE"
         ],
