--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -144,6 +144,22 @@
         }
       ]
     },
+    "AMPLIFY_storage_kitefrontend6eb0e8b5_bucketName": {
+      "usedBy": [
+        {
+          "category": "storage",
+          "resourceName": "kitefrontend6eb0e8b5"
+        }
+      ]
+    },
+    "AMPLIFY_storage_kitefrontend6eb0e8b5_region": {
+      "usedBy": [
+        {
+          "category": "storage",
+          "resourceName": "kitefrontend6eb0e8b5"
+        }
+      ]
+    },
     "AMPLIFY_storage_kitefrontendd73ee5fd_bucketName": {
       "usedBy": [
         {
@@ -161,5 +177,12 @@
       ]
     }
   },
-  "storage": {}
+  "storage": {
+    "kitefrontend6eb0e8b5": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3",
+      "serviceType": "imported"
+    }
+  }
 }
