--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "i": "^0.3.7",
-    "next": "^13.4.7",
+    "next": "^13.4.8",
     "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.2.0",
+    "react-paginator": "^0.0.5",
     "react-slick": "^0.28.1",
     "react-toastify": "^9.1.2",
     "slick-carousel": "^1.8.1",
@@ -51,7 +53,7 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^8.8.0",
-    "eslint-config-next": "^12.0.10",
+    "eslint-config-next": "^13.4.8",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.1",
     "prettier": "^2.5.1",
