--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "i": "^0.3.7",
-    "next": "^13.4.8",
+    "next": "12.1.2",
     "npm": "^9.6.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.2.0",
     "react-paginator": "^0.0.5",
@@ -48,7 +48,8 @@
   },
   "devDependencies": {
     "@types/node": "18.11.8",
-    "@types/react": "18.0.24",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^2.0.2",
